[package]
name = "nft-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.2"
poem-openapi = { version = "1.2", features = ["swagger-ui"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.34"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
nft-macros = { version ="*", path = "./nft-macros"}
# serde = { version = "1.0.136", features = ["derive"]}
# serde_json = { version = "1.0.79"}